added rename new conflict upload file name(do not overwrite), added session id for each visit during healthcheck.

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 
     <h2>Upload Files</h2>
     <p id="healthcheck"></p>
+    <p id="sessionId"></p>
     <form id="uploadForm">
         <input type="file" id="fileInput" multiple required> <!-- Added 'multiple' -->
         <button type="submit">Upload</button>
