--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Upload</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex flex-col items-center py-10">
-
-    <div class = "w-11/12 sm:max-w-3xl">
+    <div class = "w-11/12 sm:max-w-3xl pt-10">
         <div class="w-full rounded-lg p-2">
             <!-- Leon NAS Title -->
-            <h1 class="text-4xl font-bold text-gray-800 mb-6">Leon NAS</h1>
+            <div id="titleArea" class="flex-col mt-5 mb-6">
+                <h1  class="text-4xl font-bold text-gray-800">Leon NAS</h1>
+                <span class="text-xs text-gray-500"></span>
+            </div>
     
             <!-- Health Check & Upload Button -->
             <div id=healthcheck class="flex justify-between items-center">
@@ -22,18 +25,19 @@
                     </div>
                     <span class="hidden text-xs text-gray-500 pt-1 pl-5">Session ID: <span id="sessionId"></span></span>
                 </div>
-                <button id="uploadBtn" class="bg-green-500 text-white px-2 py-2 rounded sm:px-3 sm:py-2 hidden">Start Upload</button>
+                <button id="uploadBtn" class="bg-green-500 text-white px-2 py-2 rounded sm:px-3 sm:py-2 hidden">Upload Now</button>
+                <button id="cancelBtn" class="bg-gray-500 text-white px-2 py-2 rounded sm:px-3 sm:py-2 hidden">Cancel</button>
             </div>
         </div>
     
         <div class="w-full bg-white shadow-md rounded-lg p-4 mt-5">
-            <div class="flex justify-between items-center border-b pb-2 mb-2">
+            <div id=uploadHeaderHolder class="flex justify-between items-center">
                 <h2 id="uploadHeader" class="text-base font-semibold">Select Files to Upload</h2>
                 <button id="selectFilesBtn" class="bg-blue-500 text-white px-3 py-1 rounded">Select Files</button>
             </div>
             <ul id="fileList" class="text-sm text-gray-700 space-y-2">
                 <!-- File items will be inserted here -->
-                <div class="flex justify-between items-center border p-2 rounded bg-gray-100">
+                <!-- <div class="flex justify-between items-center border p-2 rounded bg-gray-100">
                     <span class = "w-4/12 overflow-hidden text-ellipsis whitespace-nowrap mr-3">asdfasdfasdfasdfasdf</span>
                     <div class="w-5/12 sm:w-6/12 h-2 bg-gray-300 rounded overflow-hidden">
                         <div id="progress-${index}" class="h-full bg-gray-500 w-0"></div>
@@ -42,6 +46,9 @@
                         <span id="status-${index}"  class="text-sm text-gray-600 ml-2">Pending</span>
                     </div>
                 </div>
+                <div class="flex justify-center items-center p-2 rounded">
+                        <div class="text-md text-gray-600">20 more...</div>
+                </div> -->
             </ul>
         </div>
     </div>
