--- a/public/uploader/index.html
+++ b/public/uploader/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Upload</title>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <link href="./style.css" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex flex-col items-center py-10">
     <div class = "w-11/12 sm:max-w-3xl pt-10">
