image working final version for SMB method.

--- a/public/generator/index.html
+++ b/public/generator/index.html
@@ -72,6 +72,6 @@
         </div>
     </div> 
     <div id="toast-message" class="hidden fixed bottom-20 left-1/2 transform -translate-x-1/2 bg-gray-500 text-white px-4 py-2 rounded-lg shadow-md">
-        Copied to clipboard!
+        Toast Message
     </div>
 </body>
