--- a/public/generator/index.html
+++ b/public/generator/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secure URL Generator</title>
     <script defer src="generatorUI.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- <link href="../style.css" rel="stylesheet"> -->
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <link href="../style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex flex-col items-center py-10">
     <div class="w-11/12 sm:max-w-2xl bg-white shadow-lg rounded-lg p-3 sm:p-6">
@@ -31,14 +31,17 @@
             </div>
 
             <!-- NAS Path Selection -->
-            <div class="flex flex-col sm:flex-row sm:items-end gap-4">
+            <div class="flex flex-row sm:items-end gap-4">
                 <label class="flex flex-col text-gray-700 flex-grow">
                     <span class="font-medium">NAS Path</span>
-                    <select id="nas-path" class="border rounded-lg p-2 mt-1"></select>
+                    <div class="flex flex-row">
+                        <select id="nas-path" class="w-2/3 border rounded-lg p-2 mt-1 mr-1"></select>
+                        <button id="add-path" class="w-1/3 p-2 mt-1 bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition">
+                            Add Path
+                        </button>
+                    </div>
                 </label>
-                <button id="add-path" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition">
-                    Add Path
-                </button>
+                
             </div>
 
             <!-- Generate Button -->
