fix css issue, handle filename with spacing, hostname as env variable

--- a/public/generator/index.html
+++ b/public/generator/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- MODAL for Adding Path -->
-    <div id="path-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center">
+    <div id="path-modal" class="hidden fixed inset-0 backdrop-blur-sm flex justify-center items-center" style="background-color: rgba(0, 0, 0, 0.5);">
         <div class="bg-white p-6 rounded-lg shadow-lg w-80">
             <h2 class="text-xl font-semibold mb-3">Add New NAS Path</h2>
             <input type="text" id="new-path" class="border p-2 w-full rounded-lg" placeholder="Enter new path">
