--- a/public/uploader/index.html
+++ b/public/uploader/index.html
@@ -37,17 +37,14 @@
             </div>
             <ul id="fileList" class="text-sm text-gray-700 space-y-2">
                 <!-- File items will be inserted here -->
-                <!-- <div class="flex justify-between items-center border p-2 rounded bg-gray-100">
-                    <span class = "w-4/12 overflow-hidden text-ellipsis whitespace-nowrap mr-3">asdfasdfasdfasdfasdf</span>
-                    <div class="w-5/12 sm:w-6/12 h-2 bg-gray-300 rounded overflow-hidden">
-                        <div id="progress-${index}" class="h-full bg-gray-500 w-0"></div>
+                <!-- <div id="list-${file.name}" class="flex justify-between items-center p-2 rounded bg-gray-100">
+                    <span id= filename-${file.name} class = "w-full overflow-hidden text-ellipsis whitespace-nowrap mr-3">lakjsdofijojinalskdnjoiasdvklmaklsdf.mp4</span>
+                    <div class="hidden w-5/12 sm:w-6/12 h-2 bg-gray-300 rounded overflow-hidden">
+                        <div id="progress-${file.name}" class="h-full bg-gray-500 w-0"></div>
                     </div>
-                    <div class="flex w-3/12 sm:w-2/12 overflow-hidden justify-center items-center">
-                        <span id="status-${index}"  class="text-sm text-gray-600 ml-2">Pending</span>
+                    <div class="hidden flex w-3/12 sm:w-2/12 overflow-hidden justify-center items-center">
+                        <span id="status-${file.name}"  class="text-sm text-gray-600 ml-2">Pending</span>
                     </div>
-                </div>
-                <div class="flex justify-center items-center p-2 rounded">
-                        <div class="text-md text-gray-600">20 more...</div>
                 </div> -->
             </ul>
         </div>
