--- a/public/uploader/index.html
+++ b/public/uploader/index.html
@@ -8,7 +8,7 @@
     <link href="/style.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex flex-col items-center py-10">
-    <div class = "w-11/12 sm:max-w-3xl pt-10">
+    <div class = "w-11/12 sm:max-w-3xl">
         <div class="w-full rounded-lg p-2">
             <!-- Leon NAS Title -->
             <div id="titleArea" class="flex-col mt-5 mb-6">
