update client side download method

--- a/public/share/index.html
+++ b/public/share/index.html
@@ -35,6 +35,7 @@
             </div>
             <ul id="fileList" class="text-sm text-gray-700 space-y-2">
                 <!-- File items will be inserted here -->
+                <div id="status"></div>
                 <div id="list-${file.name}" class="flex justify-between items-center p-2 rounded bg-gray-100">
                     <span id="filename-${file.name}"
                         class="w-full overflow-hidden text-ellipsis whitespace-nowrap mr-3">myvideo.mp4</span>
